--- a/home/style.css
+++ b/home/style.css
@@ -44,11 +44,11 @@ Last Update: Jan 19, 2018
 @import url(css/font-awesome.min.css);
 @import url(css/style.css);
 /* :: 1.0 Reboot CSS */
-* {
+/** {
   margin: 0;
-  padding: 0; }
+  padding: 0; }*/
 
-body {
+/*body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -64,7 +64,7 @@ h6 {
   font-family: "Playfair Display", serif;
   color: #252525;
   line-height: 1.3;
-  font-weight: 400; }
+  font-weight: 400; }*/
 
 a,
 a:active,
@@ -90,13 +90,13 @@ p {
 img {
   max-width: 100%;
   height: auto; }
-
+/*
 ul {
   margin: 0;
   padding: 0; }
   ul li {
     margin: 0;
-    padding: 0; }
+    padding: 0; }*/
 
 .bg-overlay {
   position: relative;
