--- a/home/style.css
+++ b/home/style.css
@@ -98,6 +98,10 @@ ul {
     margin: 0;
     padding: 0; }
 
+#table-center {
+  text-align: center;
+}
+
 .bg-overlay {
   position: relative;
   z-index: 1; }
