--- a/home/style.css
+++ b/home/style.css
@@ -34,7 +34,6 @@ Last Update: Jan 19, 2018
 
   --------------------------------------------- */
 /* Import Fonts & All CSS */
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Playfair+Display:400,700");
 @import url(css/bootstrap.min.css);
 @import url(css/animate.css);
 @import url(css/default-assets/classy-nav.css);
@@ -55,17 +54,6 @@ body {
   position: relative;
   z-index: auto; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Playfair Display", serif;
-  color: #252525;
-  line-height: 1.3;
-  font-weight: 400; }
-
 a,
 a:active,
 a:focus,
@@ -82,10 +70,9 @@ li {
   list-style: none; }
 
 p {
-  line-height: 1.7;
-  color: #6e6e6e;
-  font-size: 16px;
-  font-weight: 400; }
+  line-height: 1.9;
+  font-size: 23px;
+}
 
 img {
   max-width: 100%;
@@ -339,54 +326,6 @@ input:focus {
     box-shadow: 0 2.5em 0 -1.3em; }
   40% {
     box-shadow: 0 2.5em 0 0; } }
-/* :: 4.0 Heading CSS */
-.section-heading {
-  position: relative;
-  z-index: 1;
-  margin-bottom: 50px; }
-  .section-heading h2 {
-    font-size: 42px;
-    text-transform: capitalize;
-    margin-bottom: 15px;
-    display: block;
-    line-height: 1.2; }
-    @media only screen and (min-width: 992px) and (max-width: 1199px) {
-      .section-heading h2 {
-        font-size: 36px; } }
-    @media only screen and (min-width: 768px) and (max-width: 991px) {
-      .section-heading h2 {
-        font-size: 36px; } }
-    @media only screen and (max-width: 767px) {
-      .section-heading h2 {
-        font-size: 30px; } }
-  .section-heading p {
-    font-size: 16px; }
-  .section-heading span {
-    position: absolute;
-    top: 50%;
-    font-size: 100px;
-    color: #bca858;
-    font-family: "Playfair Display", serif;
-    text-transform: uppercase;
-    line-height: 1;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    z-index: -1;
-    opacity: 0.1;
-    left: 0;
-    font-weight: 700; }
-    @media only screen and (min-width: 992px) and (max-width: 1199px) {
-      .section-heading span {
-        font-size: 70px; } }
-    @media only screen and (min-width: 768px) and (max-width: 991px) {
-      .section-heading span {
-        font-size: 70px; } }
-    @media only screen and (max-width: 767px) {
-      .section-heading span {
-        font-size: 50px; } }
-  .section-heading.text-right span {
-    right: 48px; }
 
 /* :: 5.0 Backtotop CSS */
 #scrollUp {
@@ -416,9 +355,7 @@ input:focus {
   box-shadow: none; }
 
 .akame-btn {
-  font-family: "Playfair Display", serif;
   position: relative;
-  z-index: 1;
   min-width: 150px;
   height: 42px;
   line-height: 40px;
@@ -428,13 +365,8 @@ input:focus {
   padding: 0 35px;
   text-align: center;
   text-transform: uppercase;
-  background-color: transparent;
-  color: #252525;
-  border: 1px solid #252525;
   border-radius: 60px;
-  -webkit-transition-duration: 500ms;
-  -o-transition-duration: 500ms;
-  transition-duration: 500ms; }
+  background-color: #ffde5c; }
   .akame-btn:focus, .akame-btn:hover {
     border-color: #bca858;
     font-weight: 400;
@@ -454,13 +386,7 @@ input:focus {
 
 /* :: 7.0 Header CSS */
 .header-area {
-  position: relative;
-  z-index: 10;
-  width: 100%;
-  -webkit-transition-duration: 500ms;
-  -o-transition-duration: 500ms;
-  transition-duration: 500ms;
-  border-bottom: 1px solid #e5e5e5; }
+  width: 100%; }
   .header-area .top-header-area {
     position: relative;
     z-index: 1;
