--- a/home/style.css
+++ b/home/style.css
@@ -40,8 +40,8 @@ Last Update: Jan 19, 2018
 @import url(css/default-assets/audioplayer.css);
 @import url(css/owl.carousel.min.css);
 @import url(css/magnific-popup.css);
-@import url(css/font-awesome.min.css);
 @import url(css/style.css);
+@import url(fonts/css)
 /* :: 1.0 Reboot CSS */
 
 a,
@@ -60,9 +60,9 @@ li {
   list-style: none; }
 
 p {
-  font-family: "Arial"
+  font-family:"Open Sans";
   line-height: 1.9;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 #after-header {
@@ -79,12 +79,27 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,.6);
+  background: rgba(0,0,0,.65);
   z-index: 2;
 }
 
 #table-center {
   text-align: center;
+}
+
+.image-box {
+  position: relative;
+  background: transparent url(img/bg-img/bg-2.png) scroll no-repeat 0 0;
+  background-size: 100% 100%;
+  height: 60vh;
+  top: 50px;
+}
+
+.into-image-box {
+  width: 50vh;
+  margin-left: 45vh;
+  padding: 25px;
+  text-align: left;
 }
 
 /* :: 5.0 Backtotop CSS */
@@ -111,8 +126,9 @@ p {
     color: #ffffff; }
 
 .inner-after-class {
-  height: 45vh;
+  height: 50vh;
   font-family:"Open Sans";
+  letter-spacing: 2px;
   position: relative;
   z-index: 3;
 }
@@ -120,7 +136,7 @@ p {
 .container-analog {
   padding: 50px;
   margin: auto;
-  width: 800px;
+  width: 1000px;
   text-align: center;
 }
 
