--- a/home/style.css
+++ b/home/style.css
@@ -76,17 +76,20 @@ p {
   z-index: 2;
 }
 
+.t-input-block {
+  padding-top: 20px;
+}
+
 .image-box {
   position: relative;
   background: transparent url(img/bg-img/bg-2.png) scroll no-repeat 0 0;
   background-size: 100% 100%;
-  height: 60vh;
   top: 50px;
 }
 
 .into-image-box {
   width: 50vh;
-  margin-left: 45vh;
+  margin-left: 30vh;
   padding: 25px;
   text-align: left;
 }
